--- a/translations/kangyur/translations/055-003_toh129-the_absorption_of_the_miraculous_ascertainment_of_peace.xml
+++ b/translations/kangyur/translations/055-003_toh129-the_absorption_of_the_miraculous_ascertainment_of_peace.xml
@@ -33,7 +33,7 @@
                 <sponsor ref="sponsors.xml#sponsor-180">anonymous</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.3.21 <date>2021</date>
+                <edition>v 1.3.22 <date>2021</date>
                 </edition>
             </editionStmt>
             <publicationStmt status="1">
@@ -66,7 +66,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2021-07-22T00:10:07.65Z" user="admin">22/07/2021 00:10:07</note>
+                <note type="lastUpdated" date-time="2022-06-13T14:29:30.708Z" user="admin">13/06/2022 14:29:30</note>
                 <note type="updated" update="translation-status" value="2.c" date-time="2019-05-29T11:54:09.215Z" user="james">2.c</note>
                 <note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>
                 <note type="updated" update="translation-status" value="2.d" date-time="2020-01-28T06:12:56.467Z" user="mike">2.d</note>
@@ -112,7 +112,7 @@
     <note type="updated" update="text-version" value="1.3.18" date-time="2021-04-15T12:08:47.903Z" user="line-tofte">Auto (update-contributors)</note>
     <note type="updated" update="text-version" value="1.3.19" date-time="2021-04-15T12:09:05.065Z" user="line-tofte">Auto (update-contributors)</note>
     <note type="updated" update="text-version" value="1.3.20" date-time="2021-04-22T14:08:39.783Z" user="celso">add @xml:lang tag to  a few Chinese strings that were missing</note>
-    <note type="updated" update="text-version" value="1.3.21" date-time="2021-07-22T00:10:04.419Z" user="celso">kiṃnara to kinnara</note>
+    <note type="updated" update="text-version" value="1.3.21" date-time="2021-07-22T00:10:04.419Z" user="celso">kiṃnara to kinnara</note>    <note type="updated" update="text-version" value="1.3.22" date-time="2022-06-13T14:29:26.81Z" user="konchog">One small fix to bibliography.</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
@@ -2435,7 +2435,7 @@
                     </bibl>
                     <bibl xml:id="UT22084-055-003-537">Goodman, Charles. <title xml:lang="en">The
                         Training Anthology of Śāntideva: A Translation of the
-                        Śikṣā-samuccaya</title>. Oxford: Oxford University Press, 2016.</bibl>
+                        Śikṣā-samuccaya</title>. New York: Oxford University Press, 2016.</bibl>
                     <bibl xml:id="UT22084-055-003-562">Harrison, Paul. <title xml:lang="en">The Samādhi of Direct Encounter with the
                         Buddhas of the Present: an Annotated English Translation of the Tibetan Version of the
                         Pratyutpanna-Buddha-Saṃmukhāvasthita-Samādhi-Sūtra with Several Appendices relating to
@@ -2662,14 +2662,14 @@
             </gloss>
         </item>
         <item>
-            <gloss type="term" xml:id="UT22084-055-003-280">
-                <term>Licchavi</term>
-                <term xml:lang="Bo-Ltn">li ts+tsha bI </term>
-                <term xml:lang="bo">ལི་ཙྪ་བཱི།</term>
-                <term xml:lang="Sa-Ltn">Licchavi</term>
-                <term type="definition">Name of the tribe and republican city-state whose capital was Vaiśālī.</term>
-            </gloss>
-        </item>
+                        <gloss xml:id="UT22084-055-003-280" type="term" mode="match">
+                            <term>Licchavi</term>
+                            <term xml:lang="Bo-Ltn" status="verified">lits+tsha bI</term>
+                            <term xml:lang="bo">ལིཙྪ་བཱི།</term>
+                            <term xml:lang="Sa-Ltn">Licchavi</term>
+                            <term type="definition">Name of the tribe and republican city-state whose capital was Vaiśālī.</term>
+                        </gloss>
+                    </item>
         <item>
             <gloss type="term" xml:id="UT22084-055-003-281">
                 <term>limit of reality</term>
@@ -2929,7 +2929,7 @@
                 <term type="definition">One set among the different qualities of a tathāgata. The <term type="ignore">ten powers</term> are (1)
                     the knowledge of what is possible and not possible; (2) the knowledge of the ripening of karma; (3)
                     the knowledge of the variety of aspirations; (4) the knowledge of the variety of natures; (5) the
-                    knowledge of the different levels of capabilites; (6) the knowledge of the destinations of all
+                    knowledge of the different levels of capabilities; (6) the knowledge of the destinations of all
                     paths; (7) the knowledge of various states of meditation (dhyāna, liberation, samādhi, samāpatti,
                     and so on); (8) the knowledge of remembering previous lives; (9) the knowledge of deaths and
                     rebirths; and (10) the knowledge of the cessation of defilements.</term>
@@ -4096,14 +4096,14 @@
             </gloss>
         </item>
         <item>
-            <gloss type="person" xml:id="UT22084-055-003-422">
-                <term>Śākyamuni</term>
-                <term xml:lang="Bo-Ltn">za kya thub pa </term>
-                <term xml:lang="bo">ཟ་ཀྱ་ཐུབ་པ།</term>
-                <term xml:lang="Sa-Ltn">Śākyamuni</term>
-                <term type="definition">The buddha of this age; the historical buddha.</term>
-            </gloss>
-        </item>
+                        <gloss xml:id="UT22084-055-003-422" type="person" mode="match">
+                            <term>Śākyamuni</term>
+                            <term xml:lang="Bo-Ltn">shAkya thub pa</term>
+                            <term xml:lang="bo">ཤཱཀྱ་ཐུབ་པ།</term>
+                            <term xml:lang="Sa-Ltn">Śākyamuni</term>
+                            <term type="definition">The buddha of this age; the historical buddha.</term>
+                        </gloss>
+                    </item>
         <item>
             <gloss type="person" xml:id="UT22084-055-003-423">
                 <term>Sharp Eyes</term>
@@ -4705,14 +4705,14 @@
             </gloss>
         </item>
         <item>
-            <gloss type="place" xml:id="UT22084-055-003-489">
-                <term>Heaven Free from Strife</term>
-                <term xml:lang="Bo-Ltn">’thab bral </term>
-                <term xml:lang="bo">འཐབ་བྲལ།</term>
-                <term xml:lang="Sa-Ltn">Suyāma</term>
-                <term type="definition">The third of the six heavens of the desire realm.</term>
-            </gloss>
-        </item>
+                        <gloss xml:id="UT22084-055-003-489" type="place" mode="match">
+                            <term>Heaven Free from Strife</term>
+                            <term xml:lang="Bo-Ltn">’thab bral</term>
+                            <term xml:lang="bo">འཐབ་བྲལ།</term>
+                            <term xml:lang="Sa-Ltn">Yāma</term>
+                            <term type="definition">The third of the six heavens of the desire realm.</term>
+                        </gloss>
+                    </item>
         <item>
             <gloss type="place" xml:id="UT22084-055-003-490">
                 <term>Heaven of Delighting in Emanations</term>
@@ -4847,8 +4847,7 @@
                 <term xml:lang="Bo-Ltn">’dzam bu gling </term>
                 <term xml:lang="bo">འཛམ་བུ་གླིང་།</term>
                 <term xml:lang="Sa-Ltn">Jambudvīpa</term>
-                <term type="definition">The continent (<foreign xml:lang="Sa-Ltn">dvīpa</foreign>) on which we live, shaped like a rose apple (<foreign xml:lang="Sa-Ltn">jambū</foreign>)
-                    according to ancient South Asian cosmology.</term>
+                <term type="definition">The name of the southern continent in Buddhist cosmology, which can signify either the known human world, or more specifically the Indian subcontinent, literally “the <foreign xml:lang="Sa-Ltn">jambu</foreign> island/continent.” Jambu is the name used for a range of plum-like fruits from trees belonging to the genus <foreign xml:lang="la">Szygium</foreign>, particularly <foreign xml:lang="la">Szygium jambos</foreign> and <foreign xml:lang="la">Szygium cumini</foreign>, and has commonly been rendered “rose apple” although “black plum” may be a less misleading term. Among various explanations given for the continent being so named, one (in the <title xml:lang="Sa-Ltn">Abhidharmakośa</title>) is that a jambu tree grows in its northern mountains beside Lake Anavatapta, mythically considered the source of the four great rivers of India, and that the continent is therefore named from the tree or the fruit. Jambudvīpa has the vajrāsana at its center and is the only continent upon which buddhas attain awakening.</term>
             </gloss>
         </item>
         <item>
