--- a/translations/kangyur/translations/057-004_toh145,847-the_dharani_of_the_jewel_torch.xml
+++ b/translations/kangyur/translations/057-004_toh145,847-the_dharani_of_the_jewel_torch.xml
@@ -31,7 +31,7 @@
                 <sponsor ref="sponsors.xml#sponsor-47">Make and Wang Xiao Juan (馬珂和王曉娟)</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.4.17 <date>2021</date>
+                <edition>v 1.4.18 <date>2021</date>
                 </edition>
             </editionStmt>
 
@@ -75,7 +75,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2021-12-13T10:38:46.841Z" user="admin">13/12/2021 10:38:46</note>
+                <note type="lastUpdated" date-time="2022-06-13T14:30:37.693Z" user="admin">13/06/2022 14:30:37</note>
                 <note type="updated" update="translation-status" value="2.d" date-time="2019-07-02T13:19:52.294Z" user="john">2.d</note>
                 <note type="updated" update="translation-status" value="2.c" date-time="2019-09-13T09:10:31.38Z" user="john">2.c</note>
                 <note type="updated" update="text-version" value="v 0.1.0" date-time="2019-10-19T07:20:48.166Z" user="andreas">v 0.1.0</note>
@@ -167,6 +167,7 @@
     <note type="updated" update="text-version" value="1.4.15" date-time="2021-06-10T22:24:21.562Z" user="mike">Typo Corrected</note>
     <note type="updated" update="text-version" value="1.4.16" date-time="2021-06-26T04:20:36.134Z" user="celso">kiṃnara to kinnara</note>
     <note type="updated" update="text-version" value="1.4.17" date-time="2021-12-13T10:38:42.641Z" user="john">Changed title of chapter referenced in Toh 44-20 to match change made there.</note>
+    <note type="updated" update="text-version" value="1.4.18" date-time="2022-06-13T14:30:33.769Z" user="konchog">One small fix to bibliography.</note>
 </notesStmt>
         </fileDesc>
     </teiHeader>
@@ -5490,7 +5491,7 @@
                     <bibl xml:id="UT22084-057-004-887">Goldstein, Melvyn C. <title xml:lang="en">The New Tibetan-English Dictionary of Modern
                             Tibetan</title>. Berkeley: University of California Press, 2001.</bibl>
                     <bibl xml:id="UT22084-057-004-888">Goodman, Charles. <title xml:lang="en">The Training Anthology of Śāntideva: A Translation of
-                            the Śikṣā-samuccaya</title>. Oxford: Oxford University Press, 2016.</bibl>
+                            the Śikṣā-samuccaya</title>. New York: Oxford University Press, 2016.</bibl>
                     <bibl xml:id="UT22084-057-004-889">Gyatso, Janet. “Letter Magic: A Peircean Perspective on the Semiotics of Rdo Grub-chen’s
                         Dhāraṇī Memory.” In <title xml:lang="en">In the Mirror of Memory: Reflections on Mindfulness and Remembrance in Indian and
                             Tibetan Buddhism</title>. Albany: State University of New York Press, 1992.</bibl>
@@ -5613,9 +5614,9 @@
                         </gloss>
                     </item>
                     <item>
-                        <gloss type="term" xml:id="UT22084-057-004-912">
+                        <gloss xml:id="UT22084-057-004-912" type="term" mode="match">
                             <term>arhat</term>
-                            <term xml:lang="Bo-Ltn">dgra bcom pa </term>
+                            <term xml:lang="Bo-Ltn">dgra bcom pa</term>
                             <term xml:lang="bo">དགྲ་བཅོམ་པ།</term>
                             <term xml:lang="Sa-Ltn">arhat</term>
                         </gloss>
