--- a/translations/kangyur/translations/075-003_toh345-the_magnificent_account_about_a_sow.xml
+++ b/translations/kangyur/translations/075-003_toh345-the_magnificent_account_about_a_sow.xml
@@ -71,7 +71,7 @@
       </titleStmt>
 
       <editionStmt>
-                <edition>v 1.0.4 <date>2022</date>
+                <edition>v 1.0.5 <date>2022</date>
                 </edition>
             </editionStmt>
 
@@ -109,7 +109,7 @@
         </bibl>
       </sourceDesc>
       <notesStmt>
-        <note type="lastUpdated" date-time="2022-06-11T10:09:01.535Z" user="admin">11/06/2022 10:09:01</note>
+        <note type="lastUpdated" date-time="2022-06-14T03:44:15.536Z" user="admin">14/06/2022 03:44:15</note>
 
         <tei:note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</tei:note>
         <tei:note type="updated" update="translation-status" value="2.d" date-time="2020-01-28T06:21:18.448Z" user="mike">2.d</tei:note>
@@ -151,6 +151,7 @@
           <note type="updated" update="text-version" value="1.0.2" date-time="2022-05-25T08:10:03.031Z" user="line-tofte">Auto (update-contributors)</note>
           <note type="updated" update="text-version" value="1.0.3" date-time="2022-05-25T15:44:33.026Z" user="konchog">A number of minor fixes to the intro, translation, and notes, documented in an email.</note>
           <note type="updated" update="text-version" value="1.0.4" date-time="2022-06-11T10:08:57.728Z" user="andre">Glossary status changed - activated in CG</note>
+          <note type="updated" update="text-version" value="1.0.5" date-time="2022-06-14T03:44:11.671Z" user="celso">added bibl</note>
       </notesStmt>
     </fileDesc>
   </teiHeader>
@@ -896,7 +897,7 @@
           <bibl xml:id="UT22084-075-003-128">Yeshé Dé. <title xml:lang="Bo-Ltn">bzang spyod kyi
               ’grel pa bzhi’i don bsdus nas brjed byang du byas pa</title> (<title xml:lang="Sa-Ltn">Bhadra­caryā­catuṣ­ṭīkā­piṇḍārthābhi­smaraṇa</title>). <ref rend="pending" target="https://read.84000.co/translation/toh4359.html">Toh 4359</ref>, Degé Tengyur
             vol. 206 (bstan bcos sna tshogs, jo), folios 184.a–213.b. </bibl>
-          <bibl xml:id="UT22084-075-003-129">Dharmadeva.<title xml:lang="Zh-Ltn"> Jie wa nang fa
+          <bibl xml:id="UT22084-075-003-129">Dharmadeva. <title xml:lang="Zh-Ltn">Jie wa nang fa
               tian zi shou san gui huo yi mian e doa jing</title>
             <title xml:lang="zh">嗟韈曩法天子 受三歸依獲免惡道經</title>. <ref target="https://cbetaonline.dila.edu.tw/en/T0595_001">Taishō 595</ref>.</bibl>
         </div>
@@ -921,6 +922,8 @@
             Buddha, 2013.</bibl>
           <bibl xml:id="UT22084-075-003-135">Feer, Léon. <title xml:lang="fr">Fragments Extraits du
               Kandjour</title>. Annales du Musée Guimet 5. Paris: Ernest Leroux, 1883. </bibl>
+          <bibl xml:id="UT22084-075-003-187">Goodman, Charles. <title xml:lang="en">The Training Anthology of Śāntideva: A Translation of the Śikṣā-samuccaya</title>. 
+            New York: Oxford University Press, 2016.</bibl>
           <bibl xml:id="UT22084-075-003-136">Jamspal, Lozang, and Kaia Fischer, trans. <title xml:lang="en">The Hundred Deeds</title> (<title xml:lang="Sa-Ltn">Karmaśataka</title>,
             Toh 340). 84000 : Translating the Words of the Buddha, 2020.</bibl>
           <bibl xml:id="UT22084-075-003-137">La Vallée Poussin, Louis. <title xml:lang="fr">Bouddhisme: Études et matériaux; Ādikarmapradīpa &amp; Bodhicaryāvatāraṭīkā</title>.
