--- a/translations/kangyur/translations/040-002_toh51-the_teaching_on_the_armor_array.xml
+++ b/translations/kangyur/translations/040-002_toh51-the_teaching_on_the_armor_array.xml
@@ -4,17 +4,15 @@
     <teiHeader>
         <fileDesc>
             <titleStmt>
+                <title type="mainTitle" xml:lang="en">The Teaching of the Armor Array</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">Varma­vyūha­nirdeśa</title>
                 <title type="mainTitle" xml:lang="Bo-Ltn">go cha’i bkod pa bstan pa</title>
                 <title type="mainTitle" xml:lang="bo">གོ་ཆའི་བཀོད་པ་བསྟན་པ།</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">Varma­vyūha­nirdeśa</title>
-                <title type="mainTitle" xml:lang="en">The Teaching of the Armor Array</title>
-                <title type="longTitle" xml:lang="Bo-Ltn">’phags pa go cha’i bkod pa bstan pa zhes bya ba theg pa chen
-                    po’i mdo</title>
-                <title type="longTitle" xml:lang="Bo-Ltn">འཕགས་པ་གོ་ཆའི་བཀོད་པ་བསྟན་པ་ཞེས་བྱ་བ་ཐེག་པ་ཆེན་པོའི་མདོ།</title>
+                <title type="longTitle" xml:lang="en">The Noble Great Vehicle Sūtra “The Teaching of the Armor Array”</title>
                 <title type="longTitle" xml:lang="Sa-Ltn">Āryavarmavyūha­nirdeśanāma­mahāyānasūtra</title>
-                <title type="longTitle" xml:lang="en">The Noble Great Vehicle Sūtra “The Teaching of the Armor
-                    Array”</title>
-                <title type="otherTitle" xml:lang="zh">被甲莊嚴會</title>
+                <title type="longTitle" xml:lang="Bo-Ltn">འཕགས་པ་གོ་ཆའི་བཀོད་པ་བསྟན་པ་ཞེས་བྱ་བ་ཐེག་པ་ཆེན་པོའི་མདོ།</title>
+                <title type="longTitle" xml:lang="Bo-Ltn">’phags pa go cha’i bkod pa bstan pa zhes bya ba theg pa chen po’i mdo</title>
+                <title type="otherTitle" xml:lang="zh">《被甲莊嚴經》（大正藏：《大寶積經被甲莊嚴會第七》）</title>
                 <author role="translatorMain" ref="contributors.xml#team-9">Translated by the Dharmachakra Translation
                     Committee<lb/> under the patronage and supervision of 84000: Translating the Words of the Buddha </author>
                 <editor role="externalReviewer" ref="contributors.xml#person-280">Kammie Takahashi</editor>
@@ -31,7 +29,7 @@
                 <sponsor ref="sponsors.xml#sponsor-202">Qing Dao Zheng Jian Group</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.0.1 <date>2021</date>
+                <edition>v 1.0.2 <date>2021</date>
                 </edition>
             </editionStmt>
 
@@ -66,8 +64,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2021-07-27T21:37:43.292Z" user="admin">27/07/2021 21:37:43</note>
-
+                <note type="lastUpdated" date-time="2022-06-14T07:54:14.531Z" user="admin">14/06/2022 07:54:14</note>
                 <note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>
                 <note type="updated" update="translation-status" value="2.f" date-time="2020-01-27T13:09:48.105Z" user="mike">2.f</note>
                 <note type="updated" update="translation-status" value="2.e" date-time="2020-09-11T11:28:36.868Z" user="line-tofte">2.e</note>
@@ -90,10 +87,9 @@
                 <note type="updated" update="text-version" value="0.0.3" date-time="2021-04-20T13:42:28.175Z" user="line-tofte">Auto (update-contributors)</note>
                 <note type="updated" update="text-version" value="0.0.4" date-time="2021-05-05T09:48:09.509Z" user="line-tofte">Auto (update-contributors)</note>
                 <note type="updated" update="text-version" value="0.0.5" date-time="2021-05-05T09:49:06.385Z" user="line-tofte">Auto (update-contributors)</note>
-            
-    <note type="updated" update="translation-status" value="1" date-time="2021-05-14T05:20:26.207Z" user="mike">1</note>
-    <note type="updated" update="text-version" value="1.0.0" date-time="2021-05-14T05:20:26.207Z" user="mike">First published version</note>
-    <note type="updated" update="text-version" value="1.0.1" date-time="2021-07-27T21:37:39.964Z" user="celso">kiṃnara to kinnara</note>
+                <note type="updated" update="translation-status" value="1" date-time="2021-05-14T05:20:26.207Z" user="mike">1</note>
+                <note type="updated" update="text-version" value="1.0.0" date-time="2021-05-14T05:20:26.207Z" user="mike">First published version</note>
+                <note type="updated" update="text-version" value="1.0.1" date-time="2021-07-27T21:37:39.964Z" user="celso">kiṃnara to kinnara</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
@@ -136,9 +132,10 @@
             </div>
             <div type="introduction">
                 <head type="introduction" tid="9">Introduction</head>
-                <milestone unit="chunk" xml:id="UT22084-040-002-6"/>
+                <div type="section" xml:id="UT22084-040-002-introduction-1">
+                    <milestone unit="chunk" xml:id="UT22084-040-002-6"/>
                 <p tid="10">
-                    <title xml:lang="en">The Teaching of the Armor Array</title> takes place in Veṇuvana, the
+                        <title xml:lang="en">The Teaching of the Armor Array</title> takes place in Veṇuvana, the
                     famous “Bamboo Grove” monastery on the outskirts of the ancient city of Rājagṛha, where the Buddha
                     Śākyamuni and his community of monks took up residence during several rainy season retreats. This
                     grove was offered to the Buddha by Bimbisāra, the king of Magadha, and it is a location where the
@@ -172,7 +169,7 @@
                     of phenomena, and thus don the great armor.</p>
                 <milestone unit="chunk" xml:id="UT22084-040-002-8"/>
                 <p tid="12">
-                    <title xml:lang="en">The Teaching of the Armor Array</title> is the seventh sūtra among the
+                        <title xml:lang="en">The Teaching of the Armor Array</title> is the seventh sūtra among the
                     forty-nine titles included in the <title xml:lang="en">Heap of Jewels</title> (Skt. <foreign xml:lang="Sa-Ltn" type="term">Ratnakūṭa</foreign>) collection in the Degé Kangyur. Only a few of
                     the texts contained in the <title xml:lang="en">Heap of Jewels</title> are extant in Sanskrit, and
                     this scripture is not one of them. The Tibetan translation, which we have rendered into English
@@ -211,7 +208,8 @@
                         text made it possible to identify several scribal errors and translation inaccuracies in the
                         Tibetan translation, which we then revised in the translation according to the
                     Chinese.</note>
-                </p>
+                    </p>
+                </div>
             </div>
         </front>
         <body>
@@ -7020,16 +7018,13 @@
                         </gloss>
                     </item>
                     <item>
-                        <gloss type="term" xml:id="UT22084-040-002-1058">
+                        <gloss xml:id="UT22084-040-002-1058" type="term" mode="match">
+                            <term>parivrājaka</term>
                             <term xml:lang="Sa-Ltn">parivrājaka</term>
-                            <term xml:lang="Bo-Ltn">pa ri pa ra tsa ka </term>
+                            <term xml:lang="Bo-Ltn">pa ri pa ra tsa ka</term>
                             <term xml:lang="bo">པ་རི་པ་ར་ཙ་ཀ</term>
                             <term xml:lang="zh">波利婆羅遮伽</term>
-                            <term>parivrājakas</term>
-                            <term type="definition">A generic designation for the group of non-Buddhist mendicants of
-                                various religious outlooks, who lived as wandering spiritual seekers
-                                <!--(Skt. <foreign xml:lang="Sa-Ltn">śrāmaṇa</foreign>) -->in India during the time of
-                                the Buddha.</term>
+                            <term type="definition">A generic designation for the group of non-Buddhist mendicants of various religious outlooks, who lived as wandering spiritual seekers <!--(Skt. <foreign xml:lang="Sa-Ltn">śrāmaṇa</foreign>) -->in India during the time of the Buddha.</term>
                         </gloss>
                     </item>
                     <item>
