--- a/translations/kangyur/translations/041-003_toh58-the_teaching_to_venerable_nanda_on_entering_the_womb.xml
+++ b/translations/kangyur/translations/041-003_toh58-the_teaching_to_venerable_nanda_on_entering_the_womb.xml
@@ -4,16 +4,15 @@
     <teiHeader>
         <fileDesc>
             <titleStmt>
-                <title type="mainTitle" xml:lang="Bo-Ltn">tshe dang ldan pa dga’ bo la mngal du ’jug pa bstan pa</title>
-                <title type="mainTitle" xml:lang="bo">ཚེ་དང་ལྡན་པ་དགའ་བོ་ལ་མངལ་དུ་འཇུག་པ་བསྟན་པ།</title>
                 <title type="mainTitle" xml:lang="en">The Teaching to Venerable Nanda on Entry into the Womb</title>
                 <title type="mainTitle" xml:lang="Sa-Ltn">Āyuṣmannanda­garbhāvakrānti­nirdeśa</title>
-                <title type="longTitle" xml:lang="bo">འཕགས་པ་ཚེ་དང་ལྡན་པ་དགའ་བོ་ལ་མངལ་དུ་འཇུག་པ་བསྟན་པ་ཞེས་བྱ་བ་ཐེག་པ་ཆེན་པོའི་མདོ།</title>
-                <title type="longTitle" xml:lang="Bo-Ltn">’phags pa tshe dang ldan pa dga’ bo la mngal du ’jug pa bstan pa zhes bya ba theg pa chen
-                    po’i mdo</title>
+                <title type="mainTitle" xml:lang="Bo-Ltn">tshe dang ldan pa dga’ bo la mngal du ’jug pa bstan pa</title>
+                <title type="mainTitle" xml:lang="bo">ཚེ་དང་ལྡན་པ་དགའ་བོ་ལ་མངལ་དུ་འཇུག་པ་བསྟན་པ།</title>
                 <title type="longTitle" xml:lang="en">The Noble Great Vehicle Sūtra “The Teaching to Venerable Nanda on Entry into the Womb”</title>
                 <title type="longTitle" xml:lang="Sa-Ltn">Āryāyuṣmannanda­garbhāvakrānti­nirdeśa</title>
-                <title type="otherTitle" xml:lang="zh"/>
+                <title type="longTitle" xml:lang="bo">འཕགས་པ་ཚེ་དང་ལྡན་པ་དགའ་བོ་ལ་མངལ་དུ་འཇུག་པ་བསྟན་པ་ཞེས་བྱ་བ་ཐེག་པ་ཆེན་པོའི་མདོ།</title>
+                <title type="longTitle" xml:lang="Bo-Ltn">’phags pa tshe dang ldan pa dga’ bo la mngal du ’jug pa bstan pa zhes bya ba theg pa chen po’i mdo</title>
+                <title type="otherTitle" xml:lang="zh">《為長老難陀說入胎經》（大正藏：《大寶積經佛為阿難說處胎會第十三》）</title>
                 <author role="translatorMain" ref="contributors.xml#team-54">Translated by Robert Kritzer<lb/>under the patronage and supervision of
                     84000: Translating the Words of the Buddha</author>
                 <consultant role="projectManager" ref="contributors.xml#person-348">Robert Kritzer</consultant>
@@ -25,7 +24,7 @@
                 <editor role="finalReviewer" ref="contributors.xml#person-74">Ryan Damron</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.1.3 <date>2022</date>
+                <edition>v 1.1.4 <date>2022</date>
                 </edition>
             </editionStmt>
 
@@ -59,7 +58,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-03-17T19:39:06.691Z" user="admin">17/03/2022 19:39:06</note>
+                <note type="lastUpdated" date-time="2022-06-14T07:56:06.247Z" user="admin">14/06/2022 07:56:06</note>
                 <note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version
                     increment</note>
                 <note type="updated" update="translation-status" value="4" date-time="2020-10-02T13:35:52.998Z" user="line-tofte">4</note>
@@ -103,7 +102,6 @@
                 <note type="updated" update="translation-status" value="2.a" date-time="2021-08-04T06:46:12.883Z" user="mike">2.a</note>
                 <note type="updated" update="text-version" value="0.0.17" date-time="2021-08-04T06:46:12.883Z" user="mike">Auto
                     (update-publication-status)</note>
-
                 <note type="updated" update="translation-status" value="2" date-time="2021-08-18T00:20:52.646Z" user="mike">2</note>
                 <note type="updated" update="text-version" value="0.0.2" date-time="2021-08-18T00:20:52.646Z" user="mike">Auto
                     (update-publication-status)</note>
