--- a/translations/kangyur/placeholders/042-001_toh60-the_meeting_of_father_and_son.xml
+++ b/translations/kangyur/placeholders/042-001_toh60-the_meeting_of_father_and_son.xml
@@ -8,12 +8,13 @@
                 <title type="mainTitle" xml:lang="Sa-Ltn">pitāputrasamāgamasūtra</title>
                 <title type="mainTitle" xml:lang="Bo-Ltn">yab sras mjal ba'i mdo/</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">āryapitāputrasamāgama­nāmamahāyānasūtra</title>
+                <title type="otherTitle" xml:lang="zh">《父子會遇經》</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa yab sras mjal ba zhes bya ba theg pa chen po'i mdo</title>
                 <author role="translatorMain" ref="contributors.xml#team-27"/>
                 <sponsor ref="eft:sponsor-1">Kris Yao</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.2 <date>2019</date>
+                <edition>v 0.0.3 <date>2019</date>
                 </edition>
             </editionStmt>
 
@@ -33,11 +34,10 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2021-12-21T16:15:09.286Z" user="cabie-sim">21/12/2021 16:15:09</note>
-            
-<note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>
-    <note type="updated" update="text-version" value="0.0.2" date-time="2021-12-21T16:15:05.141Z" user="cabie-sim">Auto (update-sponsorship)</note>
-</notesStmt>
+                <note type="lastUpdated" date-time="2022-06-14T07:57:35.803Z" user="admin">14/06/2022 07:57:35</note>
+                <note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>
+                <note type="updated" update="text-version" value="0.0.2" date-time="2021-12-21T16:15:05.141Z" user="cabie-sim">Auto (update-sponsorship)</note>
+            </notesStmt>
         </fileDesc>
     </teiHeader>
     <text>
