--- a/translations/kangyur/translations/042-003_toh62-the_questions_of_rastrapala.xml
+++ b/translations/kangyur/translations/042-003_toh62-the_questions_of_rastrapala.xml
@@ -4,15 +4,15 @@
     <teiHeader>
         <fileDesc>
             <titleStmt>
+                <title type="mainTitle" xml:lang="en">The Questions of Rāṣṭrapāla</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">Rāṣṭrapāla­paripṛcchā</title>
                 <title type="mainTitle" xml:lang="Bo-Ltn">yul ’khor skyong gis zhus pa</title>
                 <title type="mainTitle" xml:lang="bo">ཡུལ་འཁོར་སྐྱོང་གིས་ཞུས་པ།</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">Rāṣṭrapāla­paripṛcchā</title>
-                <title type="mainTitle" xml:lang="en">The Questions of Rāṣṭrapāla</title>
-                <title type="longTitle" xml:lang="Bo-Ltn">’phags pa yul ’khor skyong gis zhus pa zhes bya ba theg pa chen po’i mdo</title>
-                <title type="longTitle" xml:lang="bo">འཕགས་པ་ཡུལ་འཁོར་སྐྱོང་གིས་ཞུས་པ་ཞེས་བྱ་བ་ཐེག་པ་ཆེན་པོའི་མདོ།</title>
-                <title type="longTitle" xml:lang="Sa-Ltn">Ārya­rāṣṭrapāla­paripṛcchā­nāma­mahāyāna­sūtra</title>
                 <title type="longTitle" xml:lang="en">The Noble Mahāyāna Sūtra “The Questions of Rāṣṭrapāla”</title>
-                <title type="otherTitle" xml:lang="zh"/>
+                <title type="longTitle" xml:lang="Sa-Ltn">Ārya­rāṣṭrapāla­paripṛcchā­nāma­mahāyāna­sūtra</title>
+                <title type="longTitle" xml:lang="bo">འཕགས་པ་ཡུལ་འཁོར་སྐྱོང་གིས་ཞུས་པ་ཞེས་བྱ་བ་ཐེག་པ་ཆེན་པོའི་མདོ།</title>
+                <title type="longTitle" xml:lang="Bo-Ltn">’phags pa yul ’khor skyong gis zhus pa zhes bya ba theg pa chen po’i mdo</title>
+                <title type="otherTitle" xml:lang="zh">《護國所問經》（大正藏：《大寶積經護國菩薩會第十八》）</title>
                 <author role="translatorMain" ref="contributors.xml#team-44">Translated by the Vienna Buddhist Translation Studies Group<lb/>under the
                     patronage and supervision of 84000: Translating the Words of the Buddha</author>
                 <author role="translatorEng" ref="contributors.xml#person-264">Klaus-Dieter Mathes</author>
@@ -30,7 +30,7 @@
                 <editor role="finalReviewer" ref="contributors.xml#person-74">Ryan Damron</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.0.5 <date>2022</date>
+                <edition>v 1.0.6 <date>2022</date>
                 </edition>
             </editionStmt>
 
@@ -67,8 +67,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-02-16T15:37:12.943Z" user="admin">16/02/2022 15:37:12</note>
-
+                <note type="lastUpdated" date-time="2022-06-14T08:02:10.529Z" user="admin">14/06/2022 08:02:10</note>
                 <note type="updated" update="text-version" value="0.0.1" date-time="2020-03-09T13:32:21.464Z" user="line-tofte">0.0.1</note>
                 <note type="updated" update="translation-status" value="2.h" date-time="2020-08-19T12:18:31.899Z" user="line-tofte">2.h</note>
                 <note type="updated" update="text-version" value="0.0.2" date-time="2020-09-22T15:01:18.386Z" user="line-tofte">Auto
@@ -99,21 +98,18 @@
                 <note type="updated" update="translation-status" value="2.a" date-time="2021-03-08T09:24:49.908Z" user="mike">2.a</note>
                 <note type="updated" update="text-version" value="0.0.12" date-time="2021-03-08T09:24:49.908Z" user="mike">Auto
                     (update-publication-status)</note>
-
                 <note type="updated" update="translation-status" value="2" date-time="2021-03-19T00:58:40.262Z" user="mike">2</note>
                 <note type="updated" update="text-version" value="0.1.1" date-time="2021-03-19T00:58:40.262Z" user="mike">Auto
                     (update-publication-status)</note>
-            
-    <note type="updated" update="text-version" value="0.1.2" date-time="2021-07-06T09:20:03.129Z" user="line-tofte">Auto (update-contributors)</note>
-    <note type="updated" update="translation-status" value="1" date-time="2021-07-14T16:23:03.745Z" user="mike">1</note>
-    <note type="updated" update="text-version" value="1.0.0" date-time="2021-07-14T16:23:03.745Z" user="mike">First published Version</note>
-    <note type="updated" update="text-version" value="1.0.1" date-time="2021-07-15T23:35:18.952Z" user="mike">Title and typos changed</note>
-    <note type="updated" update="text-version" value="1.0.2" date-time="2021-09-22T05:56:45.641Z" user="mike">typo corrected </note>
-    <note type="updated" update="text-version" value="1.0.3" date-time="2022-02-01T06:49:57.021Z" user="andre">definition of arhat: critical remark removed</note>
-
-    <note type="updated" update="text-version" value="1.0.4" date-time="2022-02-01T07:04:24.589Z" user="andre">definition of Śakra: critical remark removed</note>
-    <note type="updated" update="text-version" value="1.0.5" date-time="2022-02-16T15:37:09.125Z" user="celso">Added new locations to glossary cache according to new hyphen rules</note>
-</notesStmt>
+                <note type="updated" update="text-version" value="0.1.2" date-time="2021-07-06T09:20:03.129Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="translation-status" value="1" date-time="2021-07-14T16:23:03.745Z" user="mike">1</note>
+                <note type="updated" update="text-version" value="1.0.0" date-time="2021-07-14T16:23:03.745Z" user="mike">First published Version</note>
+                <note type="updated" update="text-version" value="1.0.1" date-time="2021-07-15T23:35:18.952Z" user="mike">Title and typos changed</note>
+                <note type="updated" update="text-version" value="1.0.2" date-time="2021-09-22T05:56:45.641Z" user="mike">typo corrected </note>
+                <note type="updated" update="text-version" value="1.0.3" date-time="2022-02-01T06:49:57.021Z" user="andre">definition of arhat: critical remark removed</note>
+                <note type="updated" update="text-version" value="1.0.4" date-time="2022-02-01T07:04:24.589Z" user="andre">definition of Śakra: critical remark removed</note>
+                <note type="updated" update="text-version" value="1.0.5" date-time="2022-02-16T15:37:09.125Z" user="celso">Added new locations to glossary cache according to new hyphen rules</note>
+            </notesStmt>
         </fileDesc>
     </teiHeader>
     <text>
@@ -4820,15 +4816,25 @@
                             <term xml:lang="bo">ཐར་པ།</term>
                             <term xml:lang="Bo-Ltn">thar</term>
                             <term xml:lang="bo">ཐར།</term>
-                            <term xml:lang="Bo-Ltn">rnam grol</term>
-                            <term xml:lang="bo">རྣམ་གྲོལ།</term>
-                            <term xml:lang="Bo-Ltn">grol </term>
-                            <term xml:lang="bo">གྲོལ།</term>
                             <term xml:lang="Sa-Ltn">vimokṣa</term>
                             <term xml:lang="Sa-Ltn">mokṣa</term>
-                            <term xml:lang="Sa-Ltn">vimukti</term>
                             <term type="definition">The state of freedom from suffering and saṃsāra that is the goal of the Buddhist path.</term>
-                            <term type="alternative">liberate</term>
+                        </gloss>
+                    </item>
+                    <item>
+                        <gloss xml:id="UT22084-042-003-321939" type="term" mode="match">
+                            <term>liberate</term>
+                            <term xml:lang="Bo-Ltn">rnam grol</term>
+                            <term xml:lang="bo">རྣམ་གྲོལ།</term>
+                            <term xml:lang="Bo-Ltn">grol</term>
+                            <term xml:lang="bo">གྲོལ།</term>
+                            <term xml:lang="Sa-Ltn">vimukti</term>
+                            <term xml:lang="Bo-Ltn">sgrol</term>
+                            <term xml:lang="bo">སྒྲོལ།</term>
+                            <term xml:lang="Bo-Ltn">thar bar byas</term>
+                            <term xml:lang="bo">ཐར་བར་བྱས།</term>
+                            <term xml:lang="Bo-Ltn">thar bar ’gyur </term>
+                            <term xml:lang="bo">ཐར་བར་འགྱུར།</term>
                             <term type="alternative">liberated</term>
                             <term type="alternative">liberating</term>
                         </gloss>
