--- a/translations/kangyur/placeholders/043-004_toh67-the_sutra_of_maitreyas_great_lions_roar.xml
+++ b/translations/kangyur/placeholders/043-004_toh67-the_sutra_of_maitreyas_great_lions_roar.xml
@@ -4,18 +4,14 @@
     <teiHeader>
         <fileDesc>
             <titleStmt>
-                <title type="mainTitle" xml:lang="en">The Sūtra of Maitreya's Great Lion's
-                    Roar</title>
+                <title type="mainTitle" xml:lang="en">The Sūtra of Maitreya's Great Lion's Roar</title>
                 <title type="mainTitle" xml:lang="Sa-Ltn">maitreyamahāsiṃhanādasūtra</title>
-                <title type="mainTitle" xml:lang="Bo-Ltn">byams pa'i seng+ge'i sgra chen po'i
-                    mdo/</title>
+                <title type="mainTitle" xml:lang="Bo-Ltn">byams pa'i seng+ge'i sgra chen po'i mdo/</title>
                 <title type="otherTitle" xml:lang="en">The Great Lion's Roar of Maitreya</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">maitreyamahāsiṃhanāda</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">āryamaitreyamahāsiṃhanāda­nāmamahāyānasūtra</title>
-                <title type="otherTitle" xml:lang="zh"> (大正藏：大寶積經摩訶迦葉會第二十三)</title>
-                <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa byams pa'i seng+ge'i sgra chen
-                    po zhes bya ba theg pa chen po'i mdo</title>
-                <title type="otherTitle" xml:lang="zh">《彌勒大獅子吼經》</title>
+                <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa byams pa'i seng+ge'i sgra chen po zhes bya ba theg pa chen po'i mdo</title>
+                <title type="otherTitle" xml:lang="zh">《彌勒大獅子吼經》(大正藏：大寶積經摩訶迦葉會第二十三) </title>
                 <author role="translatorMain" ref="eft:team-16"/>
                 <author role="translatorEng" ref="eft:person-115">Karen Liljenberg</author>
                 <consultant role="projectManager" ref="eft:person-115">Karen Liljenberg</consultant>
@@ -25,7 +21,7 @@
                 <sponsor ref="sponsors.xml#sponsor-194">Ting Xie, Guowen Xie, Xiangzhi Yu, Jiayu Xie</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.1.7 <date>2019</date>
+                <edition>v 0.1.8 <date>2019</date>
                 </edition>
             </editionStmt>
 
@@ -45,16 +41,20 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-05-30T12:09:45.276Z" user="admin">30/05/2022 12:09:45</note>
-            
-<note type="updated" update="text-version" value="v 0.1.0" date-time="2019-12-09T07:11:15.835Z" user="andreas">v 0.1.0</note>
-<note type="updated" update="translation-status" value="2.g" date-time="2019-12-11T09:08:42.75Z" user="andreas">2.g</note>
-<note type="updated" update="text-version" value="v 0.1.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>
-<note type="updated" update="translation-status" value="2.h" date-time="2020-01-27T12:58:55.062Z" user="mike">2.h</note>
-    <note type="updated" update="text-version" value="0.1.2" date-time="2021-10-05T09:28:42.985Z" user="line-tofte">Auto (update-contributors)</note>
-    <note type="updated" update="text-version" value="0.1.3" date-time="2021-10-05T09:29:08.027Z" user="line-tofte">Auto (update-contributors)</note>
-    <note type="updated" update="translation-status" value="2.g" date-time="2021-10-05T09:31:09.265Z" user="line-tofte">2.g</note>
-    <note type="updated" update="text-version" value="0.1.4" date-time="2021-10-05T09:31:09.265Z" user="line-tofte">Auto (update-publication-status)</note>    <note type="updated" update="translation-status" value="2.f" date-time="2022-03-28T06:49:20.556Z" user="line-tofte">2.f</note>    <note type="updated" update="text-version" value="0.1.5" date-time="2022-03-28T06:49:20.556Z" user="line-tofte">Auto (update-publication-status)</note>    <note type="updated" update="text-version" value="0.1.6" date-time="2022-05-30T12:08:49.798Z" user="line-tofte">Auto (update-contributors)</note>    <note type="updated" update="translation-status" value="2.e" date-time="2022-05-30T12:09:39.478Z" user="line-tofte">2.e</note>    <note type="updated" update="text-version" value="0.1.7" date-time="2022-05-30T12:09:39.478Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="lastUpdated" date-time="2022-06-14T08:04:06.001Z" user="admin">14/06/2022 08:04:06</note>
+                <note type="updated" update="text-version" value="v 0.1.0" date-time="2019-12-09T07:11:15.835Z" user="andreas">v 0.1.0</note>
+                <note type="updated" update="translation-status" value="2.g" date-time="2019-12-11T09:08:42.75Z" user="andreas">2.g</note>
+                <note type="updated" update="text-version" value="v 0.1.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>
+                <note type="updated" update="translation-status" value="2.h" date-time="2020-01-27T12:58:55.062Z" user="mike">2.h</note>
+                <note type="updated" update="text-version" value="0.1.2" date-time="2021-10-05T09:28:42.985Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="text-version" value="0.1.3" date-time="2021-10-05T09:29:08.027Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="translation-status" value="2.g" date-time="2021-10-05T09:31:09.265Z" user="line-tofte">2.g</note>
+                <note type="updated" update="text-version" value="0.1.4" date-time="2021-10-05T09:31:09.265Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="translation-status" value="2.f" date-time="2022-03-28T06:49:20.556Z" user="line-tofte">2.f</note>
+                <note type="updated" update="text-version" value="0.1.5" date-time="2022-03-28T06:49:20.556Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="text-version" value="0.1.6" date-time="2022-05-30T12:08:49.798Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="translation-status" value="2.e" date-time="2022-05-30T12:09:39.478Z" user="line-tofte">2.e</note>
+                <note type="updated" update="text-version" value="0.1.7" date-time="2022-05-30T12:09:39.478Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
