--- a/translations/kangyur/translations/043-006_toh69-inspiring_determination.xml
+++ b/translations/kangyur/translations/043-006_toh69-inspiring_determination.xml
@@ -4,15 +4,15 @@
     <teiHeader>
         <fileDesc>
             <titleStmt>
-                <title type="mainTitle" xml:lang="Bo-Ltn">lhag bsam skul ba</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">Adhyāśayasaṃcodana</title>
                 <title type="mainTitle" xml:lang="en">Inspiring Determination</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">Adhyāśayasaṃcodana</title>
+                <title type="mainTitle" xml:lang="Bo-Ltn">lhag bsam skul ba</title>
                 <title type="mainTitle" xml:lang="bo">ལྷག་བསམ་སྐུལ་བ།</title>
-                <title type="longTitle" xml:lang="Bo-Ltn">’phags pa lhag pa’i bsam pa bskul ba zhes bya ba theg pa chen po’i mdo</title>
-                <title type="longTitle" xml:lang="Sa-Ltn">Āryā­dhyāśayasaṃcodana­nāma­mahāyāna­sūtra</title>
-                <title type="longTitle" xml:lang="bo">འཕགས་པ་ལྷག་པའི་བསམ་པ་བསྐུལ་བ་ཞེས་བྱ་བ་ཐེག་པ་ཆེན་པོའི་མདོ།</title>
                 <title type="longTitle" xml:lang="en">The Noble Mahāyāna Sūtra “Inspiring Determination”</title>
-                <title type="otherTitle" xml:lang="zh"/>
+                <title type="longTitle" xml:lang="Sa-Ltn">Āryā­dhyāśayasaṃcodana­nāma­mahāyāna­sūtra</title>
+                <title type="longTitle" xml:lang="Bo-Ltn">’phags pa lhag pa’i bsam pa bskul ba zhes bya ba theg pa chen po’i mdo</title>
+                <title type="longTitle" xml:lang="bo">འཕགས་པ་ལྷག་པའི་བསམ་པ་བསྐུལ་བ་ཞེས་བྱ་བ་ཐེག་པ་ཆེན་པོའི་མདོ།</title>
+                <title type="otherTitle" xml:lang="zh">《增上意樂促進經》（大正藏：《大寶積經發勝志樂會第二十五》）</title>
                 <author role="translatorMain" ref="contributors.xml#team-5">Translated by the Blazing Wisdom Translation Group<lb/>under the patronage
                     and supervision of 84000: Translating the Words of the Buddha</author>
                 <editor role="externalReviewer" ref="contributors.xml#person-256">Douglas Duckworth</editor>
@@ -29,7 +29,7 @@
                 <editor role="finalReviewer" ref="contributors.xml#person-50">Andreas Doctor</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.1.17 <date>2022</date>
+                <edition>v 1.1.18 <date>2022</date>
                 </edition>
             </editionStmt>
 
@@ -63,8 +63,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-04-11T13:18:47.202Z" user="admin">11/04/2022 13:18:47</note>
-
+                <note type="lastUpdated" date-time="2022-06-14T08:04:55.947Z" user="admin">14/06/2022 08:04:55</note>
                 <note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version
                     increment</note>
                 <note type="updated" update="translation-status" value="2.d" date-time="2020-01-28T06:10:39.102Z" user="mike">2.d</note>
@@ -99,14 +98,12 @@
                 <note type="updated" update="translation-status" value="2.a" date-time="2021-02-01T19:40:42.487Z" user="mike">2.a</note>
                 <note type="updated" update="text-version" value="0.0.13" date-time="2021-02-01T19:40:42.487Z" user="mike">Auto
                     (update-publication-status)</note>
-
                 <note type="updated" update="text-version" value="0.0.14" date-time="2021-02-05T14:38:53.243Z" user="andre">Auto
                     (update-titles)</note>
                 <note type="updated" update="text-version" value="0.0.15" date-time="2021-02-05T14:39:12.974Z" user="andre">Auto
                     (update-titles)</note>
                 <note type="updated" update="text-version" value="0.0.16" date-time="2021-02-05T14:41:10.215Z" user="andre">Auto
                     (update-titles)</note>
-
                 <note type="updated" update="translation-status" value="2" date-time="2021-02-26T06:40:27.827Z" user="mike">2</note>
                 <note type="updated" update="text-version" value="0.0.17" date-time="2021-02-26T06:40:27.827Z" user="mike">Auto
                     (update-publication-status)</note>
@@ -114,7 +111,6 @@
                     (update-contributors)</note>
                 <note type="updated" update="text-version" value="0.0.19" date-time="2021-03-08T09:55:16.083Z" user="line-tofte">Auto
                     (update-contributors)</note>
-
                 <note type="updated" update="translation-status" value="1" date-time="2021-04-01T13:53:44.368Z" user="mike">1</note>
                 <note type="updated" update="text-version" value="1.0.0" date-time="2021-04-01T13:53:44.368Z" user="mike">First published
                     version</note>
@@ -130,10 +126,8 @@
                 <note type="updated" update="text-version" value="1.1.5" date-time="2021-04-26T09:17:48.297Z" user="mike">Typo corrected</note>
                 <note type="updated" update="text-version" value="1.1.6" date-time="2021-04-27T10:24:21.345Z" user="laura">Added Tib. vol. # to
                     biblScope</note>
-
                 <note type="updated" update="text-version" value="1.1.7" date-time="2021-05-26T10:41:05.722Z" user="laura">Entered revisions from
                     translator</note>
-
                 <note type="updated" update="text-version" value="1.1.8" date-time="2021-05-28T15:20:42.656Z" user="laura">Corrected a few errors from
                     inputting revisions.</note>
                 <note type="updated" update="text-version" value="1.1.2" date-time="2021-06-02T11:44:51.246Z" user="mike">Konchog's corrections
